@@ -623,7 +623,8 @@ changes the output size.
       <dt><b>int es_med_passes</b></dt>
       <dd>
         <b>dcraw keys:</b> none <br/>
-        nonzero - Use edge-sensitive median filtering for artifact supression after VCD demosaic.
+        Number of edge-sensitive median filter passes after VCD+AHD demosaic.
+        Value above 1 is highly not recommended.
       </dd>
       <dt><b>int amaze_ca_refine</b></dt>
       <dd>
@@ -1107,7 +1108,7 @@ data source is recorded. The possible values are listed below.
     <address><a href="mailto:info@libraw.org">LibRaw Team</a></address>
 <!-- Created: Sun Mar 16 14:42:41 MSK 2008 -->
 <!-- hhmts start -->
-Last modified: Mon Nov 15 16:33:23 UTC 2010
+Last modified: Wed Nov 17 12:25:39 UTC 2010
 <!-- hhmts end -->
   </body>
 </html>
