@@ -651,13 +651,13 @@
       <dt><b>int eeci_refine</b></dt>
       <dd>
         <b>Ключи dcraw:</b> нет <br/>
-        ненулевое значение - Использовать алгоритм EECI refine после VCD-интерполяции.
+        ненулевое значение - Использовать алгоритм EECI refine после VCD+AHD-интерполяции.
       </dd>
       <dt><b>int es_med_passes</b></dt>
       <dd>
         <b>Ключи dcraw:</b> нет <br/>
-        ненулевое значение - использовать медианный фильтр, чувствительный к границам, для подавления артефактов
-        после VCD-интерполяции.
+        Количество проходов медианного фильтра, чувствительного к границам для подавления артефактов
+        VCD+AHD интерполяции. Значения больше 1 не рекомендуются.
       </dd>
       <dt><b>int amaze_ca_refine</b></dt>
       <dd>
@@ -1152,7 +1152,7 @@ protected:
     <address><a href="mailto:info@libraw.org">LibRaw Team</a></address>
 <!-- Created: Sun Mar 16 14:42:41 MSK 2008 -->
 <!-- hhmts start -->
-Last modified: Mon Nov 15 17:27:16 UTC 2010
+Last modified: Wed Nov 17 12:24:58 UTC 2010
 <!-- hhmts end -->
   </body>
 </html>
