@@ -32,22 +32,58 @@
       <li><b>dcraw_emu</b> Полный эмулятор dcraw (за исключением ключей -D -d -P -K -i -e, которые обрабатываются в
         других примерах использования). Основной интерес представляет обработка ключей командной строки (скопированная
         из  dcraw). Результат работы должен бинарно совпадать с результатом работы  dcraw с теми же ключами командной
-        строки.<br/>
-        Этот пример поддерживает дополнительный ключ командной строки <b>-1</b>, означающий "выводить 16-битные
-        данные (tiff/ppm/pgm) с гамма-коррекцией".<br/>
-        Ключ <b>-E</b> включает использование <a href="API-CXX-rus.html#open_buffer">интерфейса open_buffer()</a>
-        куда передается mmap()-ed файл (Unix only).
-        <br/>
-        Ключ <b>-c значение-в-диапазоне 0-1</b> меняет значение параметра <strong>params.adjust_maximum_thr</strong>.
-        Для отключения автоматического вычисления максимума, поставьте этот параметр в 0.0.
-        <br/>
-        Ключ <b>-d</b> включает тайминг отдельных этапов обработки.
-        <br/>
-        Ключ  <b>-G</b> включает фазу green_matching (см. Changelog).
-        <br/>
-        Ключ <b>-B x y w h</b> включает обрезание (cropping) выходного изображения до прямоугольника с 
-        верхним левым углом в x,y шириной w и высотой h. Координаты и размеры - до поворотов изображения (если 
-        применяются повороты).
+        строки.
+        <p>
+          Этот пример поддерживает дополнительные ключи, отсутствующие в оригинальной dcraw:
+        </p>
+        <dl>
+          <dt><b>-mmap</b></dt>
+          <dd>
+            Включает использование <a href="API-CXX-rus.html#open_buffer">интерфейса open_buffer()</a>
+            куда передается mmap()-ed файл (Unix only).
+          </dd>
+          <dt><b>-c значение в диапазоне 0-1</b></dt>
+          <dd>
+            Ключ меняет значение параметра <strong>params.adjust_maximum_thr</strong>.
+            Для отключения автоматического вычисления максимума, поставьте этот параметр в 0.0.
+            <br/>
+            Умолчание: 0.75
+          </dd>
+          <dt><b>-timing</b></dt>
+          <dd>
+            Включает тайминг отдельных этапов обработки.
+          </dd>
+          <dt><b>-G</b></dt>
+          <dd>
+            Включает green_matching: выравнивание каналов зеленого для тех камер, где эти каналы различаются.
+          </dd>
+          <dt><b>-B x y w h</b></dt>
+          <dd>
+            Включает обрезание (cropping) выходного изображения до прямоугольника с 
+            верхним левым углом в x,y шириной w и высотой h. Координаты и размеры - до поворотов изображения (если 
+            применяются повороты).
+          </dd>
+          <dt><b>-dcbi N</b></dt>
+          <dd>Устанавливает количество дополнительных итераций алгоритма DCB (только для -q 4).
+            Умолчание - 0 (нет дополнительных итераций)
+          </dd>
+          <dt><b>-dcbe</b></dt>
+          <dd>
+            Включает режим DCB color enhance (только для -q 4).
+          </dd>
+          <dt><b>-eeci</b></dt>
+          <dd>
+            Включает режим EECI refine (только для mixed VCD/AHD -q 8)
+          </dd>
+          <dt><b>-esmed N</b></dt>
+          <dd>
+            Количество проходов edge-sensitive median filter для интерполяции VCD+AHD
+          </dd>
+          <dt><b>-amaseca</b></dt>
+          <dd>
+            Включает режим подавления хроматической аберрации перед интерполяцией AMaZE (-q 10)
+          </dd>
+        </dl>
       </li>
       <li><b>half_mt</b> Эмулятор <b>dcraw -h</b>, понимает ключи -a (автоматический баланс белого по всему
         изображению), -w (баланс белого камеры), -T (выводить в tiff) и -J n - количество параллельных threads,
@@ -184,7 +220,7 @@ end:
     <address><a href="mailto:info@libraw.org">LibRaw Team</a></address>
 <!-- Created: Sun Mar 16 12:19:36 MSK 2008 -->
 <!-- hhmts start -->
-Last modified: Fri Oct 15 13:25:17 MSD 2010
+Last modified: Wed Nov 17 13:44:56 UTC 2010
 <!-- hhmts end -->
   </body>
 </html>
